Changes in 0.8.0.0

  * NFData instances for all data type

  * {i,}zipWith3 and {i,}zipWithM_ added


Changes in 0.7.0.3

  * GHC 7.10 support


Changes in 0.7.0.0

  * Type level addition for unary numbers added

  * `concat` function added

  * More consistent naming for functions for working with `Fun`


Changes in 0.6.4.0

  * Isomorphism between Peano numbers and Nat added. (GHC >= 7.8)


Changes in 0.6.3.1

  * Documentation fixes.


Changes in 0.6.3.0

  * Left scans added.


Changes in 0.6.2.0

  * `Vec1' type synonym for boxed/unboxed/etc. vectors added.

  * Vector instance for Data.Typeable.Proxy (GHC >= 7.8)


Changes in 0.6.1.1

  * GHC 7.8 support


Changes in 0.6.1.0

  * `distribute', `collect' and their monadic variants added.


Changes in 0.6.0.0

  * Data instance for all array-based vectors added.

  * Storable instance added for `Storable.Vec'.

  * Monoid instances added for all vectors.


Changes in 0.5.1.0

  * Zero-element vector `Empty' is added.


Changes in 0.5.0.0

  * `ContVec' now behaves like normal vector. `Arity' type class is
    reworked. `Id' data type is removed.

  * Construction of vector reworked.

  * `reverse', `snoc', `consV', `fold' and `foldMap' are added.

  * Type changing maps and zips are added.

  * Vector indexing with type level numbers is added.

  * Twan van Laarhoven's lens added. (`element' and `elementTy')

  * Ord instances added to vector data types defined in the library.


Changes in 0.4.4.0

  * Functor and Applicative instances are added to Id.


Changes in 0.4.3.0

  * Typeable instance for S and Z added.


Changes in 0.4.2.0

  * 1-tuple `Only' added.

  * fromList' and fromListM added.

  * apply functions from Arity type class generalized.


Changes in 0.4.1.0

  * `cons' function added.

  * Getter for `Fun' data type added.


Changes in 0.4.0.0

  * Wrapper for monomorphics vectors is added.

  * `VecList' is reimplemented as GADT and constructors are exported.
